--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -23,6 +23,10 @@
         "prettier"
     ],
     "rules": {
+        "no-unused-vars": ["error", { "argsIgnorePattern": "_", "ignoreRestSiblings": false }],
+        "@typescript-eslint/no-unused-vars": ["error", {
+            "argsIgnorePattern": "_"
+        }],
         "prettier/prettier": "error",
         "import/extensions": [
             "error",
